--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 750px;
-    height: 900px;
+/*     height: 900px; */
 }
 
 .profile-header {
@@ -28,7 +28,7 @@ body {
 }
 
 .profile-img {
-    width: 620px;
+    width: 320px;
     height: 320px;
     border-radius: 50%;
     object-fit: cover;
